// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`architecture.md scaffold > Node Express project with structure overflow 1`] = `
"<!-- SCAFFOLD - Setup will fill this file -->

# Architecture — test-project

## Key Facts
**Detected:** Express application

## Open Questions
**Unexamined:** What architecture pattern? (monolith, microservices, serverless, modular monolith)
**Unexamined:** What's in scope? What's external? How are boundaries enforced?
**Unexamined:** Key architectural decisions, rationale, alternatives considered
**Unexamined:** What does this project optimize for? What does it sacrifice?

---

*Last updated: 2026-03-19T10:00:00Z*
"
`;

exports[`architecture.md scaffold > empty result (scan failed) 1`] = `
"<!-- SCAFFOLD - Setup will fill this file -->

# Architecture — test-project

## Key Facts

## Open Questions
**Unexamined:** What architecture pattern? (monolith, microservices, serverless, modular monolith)
**Unexamined:** What's in scope? What's external? How are boundaries enforced?
**Unexamined:** Key architectural decisions, rationale, alternatives considered
**Unexamined:** What does this project optimize for? What does it sacrifice?

---

*Last updated: 2026-03-19T10:00:00Z*
"
`;

exports[`architecture.md scaffold > rich Python FastAPI project with structure entries 1`] = `
"<!-- SCAFFOLD - Setup will fill this file -->

# Architecture — test-project

## Key Facts
**Detected:** FastAPI application
**Detected:** Database: PostgreSQL

## Open Questions
**Unexamined:** What architecture pattern? (monolith, microservices, serverless, modular monolith)
**Unexamined:** What's in scope? What's external? How are boundaries enforced?
**Unexamined:** Key architectural decisions, rationale, alternatives considered
**Unexamined:** What does this project optimize for? What does it sacrifice?

---

*Last updated: 2026-03-19T10:00:00Z*
"
`;
